fixed dropdown cutoff and BG scrolling on mobile

--- a/src/styles/components/_dropdown.scss
+++ b/src/styles/components/_dropdown.scss
@@ -17,28 +17,17 @@
   }
 
   &__backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: block;
-    width: 100vw;
-    height: 100vh;
-    z-index: $mc-zindex-dropdown-backdrop;
-
-    background: var(--mc-theme-dropdown-backdrop);
     opacity: 0;
-
     transition: opacity $dropdown-speed ease;
 
-    pointer-events: none;
-
     .mc-dropdown--active & {
+      z-index: $mc-zindex-dropdown-backdrop;
       opacity: 1;
       pointer-events: auto;
-    }
 
-    @media (min-width: $mc-bp-sm) {
-      display: none;
+      @media (min-width: $mc-bp-sm) {
+        display: none;
+      }
     }
   }
 
@@ -148,11 +137,17 @@
 
   // For fixing scroll on mobile
   @media (max-width: $mc-bp-sm) {
-    &__body--open {
-      position: fixed;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+
+    &__html--open {
       overflow: hidden;
-      height: 100vh;
-      width: 100vw;
+      body { overflow: hidden; }
     }
   }
 }
